<resources>
    <string name="app_name">Yoga App</string>

    <!-- Buttons and Labels -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account"><u>Already Have an Account?</u></string>
    <string name="join_here"><u>Join Here!</u></string>
    <string name="forget_password"><u>Did you forget your password ?</u></string>
    <string name="register">CONTINUE</string>
    <string name="sign_in_options">Sign in options</string>
    <string name="sign_up_options">Sign up options</string>
    <string name="continue_with_e_mail">Continue with Email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="dismiss">Dismiss</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_text">By continuing, you agree to the Terms and Conditions and Privacy Policy of the Yoga App</string>
    <string name="terms">These Terms and Conditions constitute a legally binding agreement made between you,
                         whether personally or on behalf of an entity (“you”) and [business entity name] (“we,” “us” or “our”),
                         concerning your access to and use of the [website name.com] website as well as any other media form,
                         media channel, mobile website or mobile application related, linked, or otherwise connected thereto
                         (collectively, the “Site”).</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy">These Privacy Policy constitute a legally binding agreement made between you,
                         whether personally or on behalf of an entity (“you”) and [business entity name] (“we,” “us” or “our”),
                         concerning your access to and use of the [website name.com] website as well as any other media form,
                         media channel, mobile website or mobile application related, linked, or otherwise connected thereto
                         (collectively, the “Site”).</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
    <string name="blog">Blog</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <!-- Hints and Helpers -->
    <string name="required">Required*</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>

    <!-- Error Messages -->
    <string name="error_msg_empty">Please fill the empty field(s) to continue</string>
    <string name="error_msg">Please fix the faulty field(s) to continue</string>
    <string name="error_msg_name_char">Username must contain at least 3 characters</string>
    <string name="error_msg_name">Username can only consist of characters</string>
    <string name="error_msg_email">Invalid Email Address</string>
    <string name="error_msg_password">Password must include at least 8 characters!</string>
    <string name="uppercase_error">Password must contain at least 1 Upper-case character</string>
    <string name="lowercase_error">Password must contain at least 1 Lower-case character</string>
    <string name="special_case_error">Password must contain at least 1 Special-case character (@#$%^&amp;+)</string>
    <string name="number_case_error">Password must contain at least 1 number (0–9)</string>
    <string name="feature">This feature will be added soon</string>
    <string name="successful_msg">User created successfully</string>
    <string name="reset_text">Reset link is sent to your email</string>
    <string name="facebook_app_id">171553195189147</string>
    <string name="fb_login_protocol_scheme">fb171553195189147</string>
    <string name="sign_out">sign out</string>
    <string name="vinyasa">VINYASA</string>
    <string name="prenatal">PRENATAL</string>
    <string name="hatha">HATHA</string>
    <string name="chair">CHAIR</string>


    <string name="dummy1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="dummy3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="dummy4">My Random Text</string>
    <string name="welcome_to_yoga_app">Welcome to Yoga App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero_zero">0:00</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="how_do_you_feel">how do you feel today ?</string>
    <string name="continue_reading"><u>Continue Reading</u></string>

</resources>