<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:title="Starters">
            <menu>
                <item
                    android:id="@+id/homeFragment"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/home" />

                <item
                    android:id="@+id/profileFragment"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Features">
            <menu>
                <item
                    android:id="@+id/meditationFragment"
                    android:icon="@drawable/ic_baseline_email_24"
                    android:title="@string/meditation" />

                <item
                    android:id="@+id/yogaFragment"
                    android:icon="@drawable/ic_baseline_lock_24"
                    android:title="@string/yoga" />

                <item
                    android:id="@+id/blogFragment"
                    android:icon="@drawable/ic_baseline_menu_book_24"
                    android:title="@string/blog" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="Other">
            <menu>
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
            </menu>
        </item>
    </group>
</menu>