<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.home.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:lineSpacingMultiplier="1.2"
        android:text="Title"
        android:gravity="center"
        android:textColor="@color/toolbar_color"
        android:textSize="@dimen/greet_title_font_size" />

    <ScrollView
        android:id="@+id/home_fragment_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dummy1"
                android:textColor="@color/toolbar_color"
                android:textSize="@dimen/greet_title_font_size"
                app:layout_constraintBottom_toTopOf="@id/text2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dummy2"
                android:textColor="@color/toolbar_color"
                android:textSize="@dimen/greet_title_font_size"
                app:layout_constraintBottom_toTopOf="@id/text3"
                app:layout_constraintEnd_toEndOf="@id/text"
                app:layout_constraintStart_toStartOf="@id/text"
                app:layout_constraintTop_toBottomOf="@id/text" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dummy3"
                android:textColor="@color/toolbar_color"
                android:textSize="@dimen/greet_title_font_size"
                app:layout_constraintBottom_toTopOf="@id/text4"
                app:layout_constraintEnd_toEndOf="@id/text"
                app:layout_constraintStart_toStartOf="@id/text"
                app:layout_constraintTop_toBottomOf="@id/text2" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dummy4"
                android:textColor="@color/toolbar_color"
                android:textSize="@dimen/greet_title_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/text"
                app:layout_constraintStart_toStartOf="@id/text"
                app:layout_constraintTop_toBottomOf="@id/text3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>